# TrailCurrentSpotter

./: CMakeLists.txt  README.MD  sdkconfig  sdkconfig.defaults
GUI/: TrailCurrentSpotter.eez-project  TrailCurrentSpotter.eez-project-ui-state
components/mqtt_client/: CMakeLists.txt
components/mqtt_client/include/: app_mqtt.h
components/mqtt_client/src/: mqtt_client.c
components/sd_config/: CMakeLists.txt
components/sd_config/include/: sd_config.h
components/sd_config/src/: sd_config.c
main/: CMakeLists.txt  actions.c  idf_component.yml  main.c  vars.c
main/ui/: screens.c  screens.h
src/: globals.h
