idf_component_register(
    SRCS
        "main.c"
        "actions.c"
        "vars.c"
        "ui/ui.c"
        "ui/screens.c"
        "ui/styles.c"
        "ui/images.c"
        "ui/ui_font_fa16.c"
        "ui/ui_font_fa32.c"
        "ui/ui_image_trailer_back.c"
        "ui/ui_image_trailer_side.c"
    INCLUDE_DIRS
        "."
        "ui"
    REQUIRES
        driver
        esp_lcd
        esp_timer
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        mqtt_client
        sd_config
)
